<resources>

    <!-- Navigationsleiste -->
    <string name="navigation_drawer_open">Öffne Navigationsleiste</string>
    <string name="navigation_drawer_close">Schließe Navigationsleiste</string>

    <!-- Was brauche ich Fragment -->
    <string name="what_i_need_titel">Was brauche ich</string>
    <string name="what_i_need_content">Was für Dokumente benötige ich:</string>

    <!-- Fehlercodes -->
    <string name="error_titel">Warnsymbole</string>
    <string name="error_menu_rot">rote Symbole</string>
    <string name="error_menu_gelb">gelbe Symbole</string>
    <string name="error_menu_gruene">grüne Symbole</string>
    <string name="error_menu_blaue">blaue Symbole</string>
    <string name="error_menu_alle">alle Symbole</string>
    <string name="error_menu_change_view">ändere Ansicht</string>

    <!-- Unfall -->
    <string name="crash_titel">Im Unfallfall</string>
    <string name="crash_content">Was muss ich im Falle eines Unfalls tun:</string>

    <!-- Punkteliste -->
    <string name="punkte_titel">Bußgeld</string>
    <string name="punkte_content">Eine Übersicht der aktuellen Bußgelder und Punkte für zu schnelles fahren oder andere Ordnungswidrigkeiten in Deutschland, Österreich und der Schweiz.</string>

    <!-- Punktzahl -->
    <string name="bussgeld_titel">Bußgeldrechner</string>
    <string name="bussgeld_ueberschrift">Wie hoch wird die zu erwartende Strafe sein</string>
    <string name="bussgeld_radio_innerhalb">Innerhalb geschlossener Ortschaft</string>
    <string name="bussgeld_radio_ausserhalb">Außerhalb geschlossener Ortschaft</string>
    <string name="bussgeld_radio_autobahn">Auf der Autobahn</string>
    <string name="bussgeld_check_toleranz">Abzug der Toleranz</string>
    <string name="bussgeld_button_berechnen">alle Daten eingegeben</string>
    <string name="bussgeld_text_geschwindigkeit">eigene Geschwindigkeit</string>
    <string name="bussgeld_text_erlaubte_geschwindigkeit">erlaubte Geschwindigkeit</string>
    <string name="bussgeld_text_berechnet">Folgendes wird dich erwarten</string>
    <string name="bussgeld_text_differenz">Differenz in Km/h</string>
    <string name="bussgeld_text_bussgeld">Bußgeld</string>
    <string name="bussgeld_text_punkte">Punkte</string>
    <string name="bussgeld_text_fahrverbot">Fahrverbot</string>

    <!-- Über Fragment -->

    <!-- TAB HOST -->
    <string name="about_tabs_tab_about">Über die App</string>
    <string name="about_tabs_tab_datenschutz">Datenschutz</string>

    <!-- TAB About -->
    <string name="about_titel">Über die App</string>
    <string name="about_mitwirkende">Mitwirkende</string>
    <string name="about_name">Christian Heinisch</string>
    <string name="about_website">Website</string>
    <string name="about_url"><a href="hilfe-rund-ums-auto.de">http://hilfe-rund-ums-auto.de</a></string>
    <string name="about_version">Version</string>
    <string name="about_disclaimer">Der Autor übernimmt keinerlei Gewähr für die Aktualität, Korrektheit, Vollständigkeit oder Qualität der bereitgestellten Informationen. Haftungsansprüche gegen den Autor, welche sich auf Schäden materieller oder ideeller Art beziehen, die durch die Nutzung oder Nichtnutzung der dargebotenen Informationen bzw. durch die Nutzung fehlerhafter und unvollständiger Informationen verursacht wurden, sind grundsätzlich ausgeschlossen, sofern seitens des Autors kein nachweislich vorsätzliches oder grob fahrlässiges Verschulden vorliegt. Alle Angebote sind freibleibend und unverbindlich. Der Autor behält es sich ausdrücklich vor, Teile der Seiten oder das gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen oder die Veröffentlichung zeitweise oder endgültig einzustellen.</string>

    <!-- TAB QUELLEN -->
    <string name="about_quellen_titel">Quellen</string>
    <string name="about_quellen_text">Texte</string>
    <string name="about_quellen">Handbuch Skoda Rapid Spaceback\nwww.bussgeld-info.de\nwww.autobild.de</string>
    <string name="about_quellen_bilder">Bilder</string>
    <string name="about_quellen_bilder_text">Wikipedia</string>
    <string name="about_bib_titel">Bibliotheken</string>
    <string name="about_bib">Picasso 2.4.0</string>

    <!-- TAB DATENSCHUTZ -->
    <string name="about_datenschutz_titel">Datenschutz</string>
    <string name="about_datenschutz">Wir übermitteln keine personenbezogene Daten an Dritte\n\nFür Werbeeinblendungen nutzen wir den Werbepartner AdMob Google Inc. Auf die Erhebung personenbezogener Daten von AdMob Google Inc. haben wir keinerlei Einfluss. Hier gilt die Datenschutzerklärung von Google.</string>

    <!-- TAB RELEASENOTES -->
    <string name="about_releasenotes_titel">Releasenotes</string>

    <!-- Releasenotes -->
    <string name="release_title">Neu in dieser Version</string>

    <!-- Releasenotes -->
    <string name="delete_title">ACHTUNG</string>
    <string name="delete_text">Damit werden alle Betankungseinträge aus der Datenbank gelöscht!\n\nDieser Schritt kann NICHT rückgängig gemacht werden!</string>

    <!-- Einstellungen -->

    <string name="einstellungen_titel">Einstellungen</string>
    <string name="einstellungen_country_titel">Wähle das Land aus</string>

    <string-array name="country_entries">
        <item>Deutschland</item>
        <item>Österreich</item>
        <item>Schweiz</item>
    </string-array>

    <string-array name="country_values">
        <item>de</item>
        <item>at</item>
        <item>ch</item>
    </string-array>
    <string name="einstellungen_delete_titel">Sollen alle Daten der APP gelöscht werden</string>
    <string name="einstellungen_delete">Daten löschen</string>
    <string name="einstellungen_backup_titel">Datensicherung für die Betankungen</string>
    <string name="einstellungen_backup">Backup erstellen</string>
    <string name="einstellungen_restore">Backup wiederherstellen</string>
    <string name="einstellungen_backup_message">Daten wurden gesichert</string>
    <string name="einstellungen_restore_message">Daten wurden wiederhergestellt</string>

    <!-- Tanken-->
    <string name="tanken_titel">Spritkosten</string>

    <!-- Tanken Dilaogfeld-->
    <string name="tanken_dialog_titel">Betankung hinzufügen</string>
    <string name="tanken_dialog_liter">Liter</string>
    <string name="tanken_dialog_euro">Gesamtpreis</string>
    <string name="tanken_dialog_datum">Datum</string>
    <string name="tanken_dialog_kilometer">Kilometerstand</string>

    <string name="tanken_dialog_change_titel">Daten ändern</string>
    <string name="tanken_dialog_change_delete">Tankfüllung löschen</string>
    <string name="tanken_dialog_change_edit">Tankfüllung bearbeiten</string>
    <string name="tanken_dialog_error">Bitte alle Felder ausfüllen</string>

    <!-- kontakt Activity-->
    <string name="kontakt_title">Kontakt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">Über die APP</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
