<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_i_need"
            android:title="@string/what_i_need_titel" />
        <item
            android:id="@+id/nav_crash"
            android:icon="@drawable/ic_i_need"
            android:title="@string/crash_titel" />
        <item
            android:id="@+id/nav_errorcode"
            android:icon="@drawable/ic_error"
            android:title="@string/error_titel" />
        <item
            android:id="@+id/nav_punkte"
            android:icon="@drawable/ic_strafe"
            android:title="@string/punkte_titel" />
        <item
            android:id="@+id/nav_punkte_summe"
            android:icon="@drawable/ic_strafe"
            android:title="@string/bussgeld_titel" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_help"
            android:title="@string/about_titel" />
    </group>

</menu>
