<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.christian_heinisch.hilferundumskfz.Main2Activity">
    <item
        android:id="@+id/action_gelb"
        android:orderInCategory="100"
        android:title="@string/error_menu_gelb"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rot"
        android:orderInCategory="100"
        android:title="@string/error_menu_rot"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_gruen"
        android:orderInCategory="100"
        android:title="@string/error_menu_gruene"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_blau"
        android:orderInCategory="100"
        android:title="@string/error_menu_blaue"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_alle"
        android:orderInCategory="100"
        android:title="@string/error_menu_alle"
        app:showAsAction="never" />
    <item
        android:id="@+id/new_view"
        android:orderInCategory="100"
        android:title="@string/error_menu_change_view"
        app:showAsAction="never" />
</menu>
