<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.christian_heinisch.hilferundumskfz.BussgeldRechnerFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:paddingTop="@dimen/padding_top">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_top"
            android:text="@string/bussgeld_ueberschrift"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup_Bussgeldrechner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton_Bussgeld_innerhalb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bussgeld_radio_innerhalb" />

            <RadioButton
                android:id="@+id/radioButton_Bussgeld_ausserhalb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bussgeld_radio_ausserhalb" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBox_Bussgeldrechner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bussgeld_check_toleranz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bussgeld_text_geschwindigkeit"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

            <EditText
                android:id="@+id/editText_Bussgeldrechner_eigene_Geschwindigkeit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bussgeld_text_erlaubte_geschwindigkeit" />

            <EditText
                android:id="@+id/editText_Bussgeldrechner_erlaubte_Geschwindigkeit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <Button
            android:id="@+id/bussgeld_rechner_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bussgeld_button_berechnen" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_top"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/bussgeld_text_berechnet"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView9"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bussgeld_text_bussgeld"
                android:textAllCaps="false"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <TextView
                android:id="@+id/textView_Bussgeldrechner_Bussgeld"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView13"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bussgeld_text_punkte"
                android:textAllCaps="false"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <TextView
                android:id="@+id/textView_Bussgeldrechner_Punkte"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView12"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bussgeld_text_fahrverbot"
                android:textAllCaps="false"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <TextView
                android:id="@+id/textView_Bussgeldrechner_Fahrverbot"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
