<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_dialog">

        <TextView
            android:id="@+id/textViewAddBeschreibung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanken_dialog_euro" />

        <EditText
            android:id="@+id/editTextTankDialogEuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="1.0"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <TextView
            android:id="@+id/textViewDialogLiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanken_dialog_liter" />

        <EditText
            android:id="@+id/editTextTankDialogLiter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="1.0"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tanken_dialog_datum" />

        <TextView
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2017-1-1"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tanken_dialog_kilometer" />

        <EditText
            android:id="@+id/editTextTankDialogKilometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

</FrameLayout>
